--- a/projects.css
+++ b/projects.css
@@ -183,7 +183,7 @@ section {
 }
 h2 {
   font-size: 1.3rem;
-  text-align: center;
+  text-align: left;
   color: #527853;
   margin-left: 80px;
   margin-right: 80px;
